Fixed Overflow Scroll

--- a/sass/modules/_base.scss
+++ b/sass/modules/_base.scss
@@ -2,6 +2,14 @@
 body {
 	font-family: 'Muli', sans-serif;
 	margin:0;
+	width:100%;
+	max-width:100%;
+	overflow-x:hidden;
+}
+
+html {
+	width:100%;
+	max-width:100%;
 	overflow-x:hidden;
 }
 
